Deploy md